WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195684
REGRESSION(PSON,
r240660
): Navigation over process boundary is flashy when using Cmd-left/right arrow to navigate
https://bugs.webkit.org/show_bug.cgi?id=195684
Summary
REGRESSION(PSON, r240660): Navigation over process boundary is flashy when us...
Chris Dumez
Reported
2019-03-13 10:27:53 PDT
Navigation over process boundary is flashy when using Cmd-left/right arrow to navigate.
Attachments
Patch
(21.72 KB, patch)
2019-03-13 12:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(21.76 KB, patch)
2019-03-13 13:05 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-03-13 10:28:07 PDT
<
rdar://problem/48294714
>
Chris Dumez
Comment 2
2019-03-13 12:07:37 PDT
Created
attachment 364560
[details]
Patch
Antti Koivisto
Comment 3
2019-03-13 12:59:36 PDT
Comment on
attachment 364560
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=364560&action=review
> Source/WebCore/ChangeLog:12 > + When a navigation is triggered by JS (and not the client), we create the Navigation object in
Cmd-left/right arrow involves JS?
> Source/WebCore/ChangeLog:22 > + This is a lot error prone, the WebProcess knows more accurately which history items it is going
"a lot error prone"
Chris Dumez
Comment 4
2019-03-13 13:01:35 PDT
Comment on
attachment 364560
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=364560&action=review
>> Source/WebCore/ChangeLog:12 >> + When a navigation is triggered by JS (and not the client), we create the Navigation object in > > Cmd-left/right arrow involves JS?
Not JS but it is a navigation triggered by the WebProcess as opposed by the UIProcess. It seems to be the same code path as navigating via JS.
Chris Dumez
Comment 5
2019-03-13 13:05:30 PDT
Created
attachment 364565
[details]
Patch
WebKit Commit Bot
Comment 6
2019-03-13 13:32:54 PDT
Comment on
attachment 364565
[details]
Patch Clearing flags on attachment: 364565 Committed
r242903
: <
https://trac.webkit.org/changeset/242903
>
WebKit Commit Bot
Comment 7
2019-03-13 13:32:56 PDT
All reviewed patches have been landed. Closing bug.
Alex Christensen
Comment 8
2019-04-01 18:49:51 PDT
Comment on
attachment 364565
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=364565&action=review
> Source/WebKit/UIProcess/WebPageProxy.cpp:4522 > + WTFLogAlways("WebPageProxy::decidePolicyForNavigationAction() creates back/forward navigation from item %s", fromItem ? fromItem->url().utf8().data() : "null");
Did you mean to commit this? We probably shouldn't be logging URLs without at least checking ephemerality of the WebsiteDataStore.
Chris Dumez
Comment 9
2019-04-01 19:39:27 PDT
(In reply to Alex Christensen from
comment #8
)
> Comment on
attachment 364565
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=364565&action=review
> > > Source/WebKit/UIProcess/WebPageProxy.cpp:4522 > > + WTFLogAlways("WebPageProxy::decidePolicyForNavigationAction() creates back/forward navigation from item %s", fromItem ? fromItem->url().utf8().data() : "null"); > > Did you mean to commit this? We probably shouldn't be logging URLs without > at least checking ephemerality of the WebsiteDataStore.
Definitely not, this was for me debugging.
Chris Dumez
Comment 10
2019-04-01 20:13:09 PDT
(In reply to Chris Dumez from
comment #9
)
> (In reply to Alex Christensen from
comment #8
) > > Comment on
attachment 364565
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=364565&action=review
> > > > > Source/WebKit/UIProcess/WebPageProxy.cpp:4522 > > > + WTFLogAlways("WebPageProxy::decidePolicyForNavigationAction() creates back/forward navigation from item %s", fromItem ? fromItem->url().utf8().data() : "null"); > > > > Did you mean to commit this? We probably shouldn't be logging URLs without > > at least checking ephemerality of the WebsiteDataStore. > > Definitely not, this was for me debugging.
Dropped in <
https://trac.webkit.org/changeset/243733
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug